fixing x-axis overflow, increased form elements width, added pointer on button

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
   padding: 5rem 0 5rem 5rem;
   font-family: "Chivo", sans-serif;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .container {
@@ -118,6 +119,7 @@ body {
   border: none;
   border-radius: 28px;
   margin-left: -10.5rem;
+  cursor: pointer;
 }
 
 .main__form__btn:hover {
@@ -268,9 +270,13 @@ body {
     flex-direction: column;
     margin: 0;
   }
+  .main__form__input {
+    width: 326px;
+  }
 
   .main__form__btn {
     margin: 1rem 1rem 0 1rem;
+    width: 326px;
   }
 
   .main__nav {
